--- a/layout_files/Location.kv
+++ b/layout_files/Location.kv
@@ -101,7 +101,7 @@
 			Widget:
 				size_hint_y:0.05
 			MyButton2:
-				text:'Learn More'
+				text:'Back'
 				on_release:root.chevron_left()
 			Widget:
 				size_hint_y:0.05
@@ -113,3 +113,4 @@
 				size_hint_y:0.2
 
 		NavButtons:
+
