--- a/layout_files/AirPollution.kv
+++ b/layout_files/AirPollution.kv
@@ -20,24 +20,10 @@
 
 		BoxLayout:
 			orientation: 'vertical'
-			Label:
-				size_hint_x:0.8
-				# canvas.before:
-				#     Color:
-				#         rgba: 1, .3, .4, .85
-				#     Rectangle:
-				#         size: self.size
-				#         pos: self.pos
+			WrapLabel:
 				id:label1
-				text_size: root.width*self.size_hint_x, None
-			    size: self.texture_size
-			    color: TXT_COLOR
-				text: 'The Air Quality Index (AQI) is a measure of air pollution created by the United States Environmental Protection Agency. \n\nThe measure ranges from 0 to 500, with indices greater than 200 indicating risk to health.'
-				font_size:'14sp'
-				halign: 'left'
-
-				# size_hint_x:0.8
-				pos_hint:{'center_x':0.5}
+				text: 'The Air Quality Index (AQI) is a measure of air pollution created by the United States Environmental Protection Agency. The measure ranges from 0 to 500, with indices greater than 200 indicating risk to health.'
+				padding: dp(0), dp(30)
 
 			Label:
 				size_hint_x:0.8
@@ -51,12 +37,12 @@
 				# size_hint_x:0.5
 				pos_hint:{'center_x':0.5}
 
-		Button:
+		MyButton2:
 			text:"Begin"
-			background_color: BTN_COLOR
-			font_style:'Button'
-			size_hint:0.7,0.25
-			pos_hint:{'center_x':0.5}
+			# background_color: BTN_COLOR
+			# font_style:'Button'
+			# size_hint:0.7,0.25
+			# pos_hint:{'center_x':0.5}
 			on_release:	root.arrow_right()
 
 		NavButtons:
@@ -155,7 +141,7 @@
 
 		NavButtons:
 
-# ----
+# -------------
 <AirPollutionScorePage>:
 	score_label:score_label
 	BoxLayout:
