--- a/layout_files/CognitiveDecline.kv
+++ b/layout_files/CognitiveDecline.kv
@@ -14,12 +14,9 @@
 		MyActionBar:
             title:cognitive_toolbar_title
 
-		Label:
+		WrapLabel:
 			text: cognitive_landing_blurb
-			font_size:'14sp'
-			halign: 'left'
-			size_hint_x:0.8
-			pos_hint:{'center_x':0.5}
+			padding: dp(0), dp(30)
 
 		Label:
 			text: cognitive_landing_subtitle
@@ -113,36 +110,44 @@
 
 		NavButtons
 
+# -------------
 <CognitiveDeclineScorePage>:
     score_label:score_label
     BoxLayout:
         orientation: 'vertical'
+
         MyActionBar:
-            title:cognitive_toolbar_title
+            title:physical_toolbar_title
 
-        Label:
-            text: 'Your score is:'
-            halign: 'center'
+        BoxLayout:
+            orientation:'vertical'
+            Label:
+                text: 'Your score is:'
+                color: TXT_COLOR
+                halign: 'center'
+                font_size:'16sp'
 
-        Label:
-            id:score_label
-            text: ''
-            halign: 'center'
+            Label:
+                id:score_label
+                text: ''
+                color: TXT_COLOR
+                halign: 'center'
+                font_size:'34sp'
 
-        MyButton2:
-            text:'Try Again'
-            on_release:root.reset_quiz()
-        Widget:
-            size_hint_y:0.05
-        MyButton2:
-            text:'Back'
-            on_release:root.chevron_left()
-        Widget:
-            size_hint_y:0.05
-        MyButton2:
-            text:'Next'
-            on_release:root.arrow_right()
+            MyButton2:
+                text:'Try Again'
+            Widget:
+                size_hint_y:0.05
+            MyButton2:
+                text:'Back'
+                on_release:root.chevron_left()
+            Widget:
+                size_hint_y:0.05
+            MyButton2:
+                text:'Next'
+                on_release:root.arrow_right()
 
+            Widget:
+                size_hint_y:0.2
 
-
-        NavButtons
+        NavButtons:
