--- a/layout_files/DietAndFood.kv
+++ b/layout_files/DietAndFood.kv
@@ -31,15 +31,12 @@
 		MyActionBar:
 			title:diet_toolbar_title
 
-		Widget:
-			size_hint_y:0.3
-		Label:
+		# Widget:
+		# 	size_hint_y:0.3
+		WrapLabel:
 			text: diet_landing_blurb
-			color: TXT_COLOR
-			font_size:'14sp'
-			halign: 'left'
-			size_hint_x:0.8
-			pos_hint:{'center_x':0.5}
+			padding: dp(0), dp(30)
+
 
 		Label:
 			# font_size:'2xw0sp'
@@ -73,58 +70,31 @@
 
 		BoxLayout:
 
-		    orientation:'vertical'
-		    size_hint_y:0.6
-		    pos_hint:{'center_x':0.5}
+			orientation:'vertical'
+			size_hint_y:0.6
+			pos_hint:{'center_x':0.5}
 
-		    Label:
-		        size_hint_x:0.8
-		        id:label1
-		        text_size: root.width*self.size_hint_x, None
-		        size: self.texture_size
-		        color: TXT_COLOR
-		        text:diet_Q0
-		        halign:'center'
-		        pos_hint:{'center_x':0.5}
+			Label:
+				size_hint_x:0.8
+				id:label1
+				text_size: root.width*self.size_hint_x, None
+				size: self.texture_size
+				color: TXT_COLOR
+				text:diet_Q0
+				halign:'center'
+				pos_hint:{'center_x':0.5}
 
-		    # BoxLayout:
-		    Label:
-		        size_hint_x:0.8
-		        # size_hint_y:0.6
-		        id:q_label
-		        text_size: root.width*self.size_hint_x, None
-		        color: TXT_COLOR
-		        size: self.texture_size
-		        text:""
-		        halign:'center'
-		        pos_hint:{'center_x':0.5,'center_y':0.3}
-
-		# BoxLayout:
-		# 	size_hint_y:0.6
-		# 	orientation:'vertical'
-		# 	pos_hint:{'center_x':0.5}
-
-		# 	Label:
-		# 		size_hint_x:0.8
-		# 		id:label1
-		# 		text_size: root.width*self.size_hint_x, None
-		# 		size: self.texture_size
-		# 		color: TXT_COLOR
-		# 		text:diet_Q0
-		# 		halign:'center'
-		# 		pos_hint:{'center_x':0.5}
-
-		# 	# BoxLayout:
-		# 	Label:
-		# 		size_hint_x:0.8
-		# 		# size_hint_y:0.6
-		# 		id:air_pollution_q_label
-		# 		text_size: root.width*self.size_hint_x, None
-		# 		color: TXT_COLOR
-		# 		size: self.texture_size
-		# 		text: diet_Q1
-		# 		halign:'center'
-		# 		pos_hint:{'center_x':0.5,'center_y':0.3}
+			# BoxLayout:
+			Label:
+				size_hint_x:0.8
+				# size_hint_y:0.6
+				id:q_label
+				text_size: root.width*self.size_hint_x, None
+				color: TXT_COLOR
+				size: self.texture_size
+				text:""
+				halign:'center'
+				pos_hint:{'center_x':0.5,'center_y':0.3}
 
 
 		GridLayout:
@@ -132,7 +102,7 @@
 			# rows:4
 
 			on_parent:
-				for i in range(0,8): txt = "{0}".format(i); self.add_widget(button.Button(text = txt,on_release=root.button_press))
+				for i in range(0,8): txt = "{0}".format(i); self.add_widget(button.Button(text = txt,on_release=root.button_press, background_color= BTN_COLOR, font_style='Button'))
 
 		NavButtons
 
@@ -178,49 +148,44 @@
 	Label:
 		size_hint_y:0.7
 
+# -------------
 <DietScorePage>:
 	score_label:score_label
 	BoxLayout:
 		orientation: 'vertical'
+
 		MyActionBar:
-			title:diet_toolbar_title
+			title:air_toolbar_title
 
-		Label:
-			text: 'Your score is:'
-			color: TXT_COLOR
-			halign: 'center'
+		BoxLayout:
+			orientation:'vertical'
+			Label:
+				text: 'Your score is:'
+				color: TXT_COLOR
+				halign: 'center'
+				font_size:'16sp'
 
-		Label:
-			id:score_label
-			color: TXT_COLOR
-			text: ''
-			halign: 'center'
+			Label:
+				id:score_label
+				text: ''
+				color: TXT_COLOR
+				halign: 'center'
+				font_size:'34sp'
 
-		MyButton2:
-			text:'Try Again'
-			on_release:root.reset_quiz()
-		Widget:
-			size_hint_y:0.05
-		MyButton2:
-			# id:next_section
-			text:'Back'
-			# font_style:'Button'
-			# size_hint_x:0.7
-			# pos_hint:{'center_x': 0.5, 'center_y': 0.5}
-			on_release:root.chevron_left()
-		Widget:
-			size_hint_y:0.05
-		MyButton2:
-			# id:next_section
-			text:'Next'
-			# font_style:'Button'
-			# size_hint_x:0.7
-			# pos_hint:{'center_x': 0.5, 'center_y': 0.5}
-			on_release:root.arrow_right()
+			MyButton2:
+				text:'Try Again'
+			Widget:
+				size_hint_y:0.05
+			MyButton2:
+				text:'Back'
+				on_release:root.chevron_left()
+			Widget:
+				size_hint_y:0.05
+			MyButton2:
+				text:'Next'
+				on_release:root.arrow_right()
 
+			Widget:
+				size_hint_y:0.2
 
-		Label:
-			size_hint_y:0.7
-
-
-		NavButtons
+		NavButtons:
