--- a/layout_files/PhysicalActivity.kv
+++ b/layout_files/PhysicalActivity.kv
@@ -9,16 +9,9 @@
         MyActionBar:
             title:physical_toolbar_title
 
-        Label:
-            text:''
-            size_hint_y:0.3
-        Label:
+        WrapLabel:
             text: physical_landing_blurb
-            color: TXT_COLOR
-            font_size:'14sp'
-            halign: 'left'
-            size_hint_x:0.8
-            pos_hint:{'center_x':0.5}
+            padding: dp(0), dp(30)
 
         Label:
             # font_size:'2xw0sp'
@@ -31,14 +24,9 @@
             # size_hint_x:0.5
             pos_hint:{'center_x':0.5}
 
-        Button:
+        MyButton2:
             text:"Begin"
-            font_style:'Button'
-            # size_hint_x:0.7
-            pos_hint:{'center_x':0.5}
-            on_release:
-                # root.parent.ids['PhysicalActivityPage'].ids['android_tabs'].switch_tab('1')
-                root.arrow_right()
+            on_release:root.arrow_right()
 
         NavButtons
 
@@ -154,49 +142,39 @@
     score_label:score_label
     BoxLayout:
         orientation: 'vertical'
+
         MyActionBar:
             title:physical_toolbar_title
 
-        Label:
-            text: 'Your score is:'
-            color: TXT_COLOR
-            halign: 'center'
+        BoxLayout:
+            orientation:'vertical'
+            Label:
+                text: 'Your score is:'
+                color: TXT_COLOR
+                halign: 'center'
+                font_size:'16sp'
 
-        Label:
-            id:score_label
-            color: TXT_COLOR
-            text: ''
-            halign: 'center'
+            Label:
+                id:score_label
+                text: ''
+                color: TXT_COLOR
+                halign: 'center'
+                font_size:'34sp'
 
-        Button:
-            id:restart_button
-            text:'Try Again'
-            font_style:'Button'
-            size_hint_x:0.7
-            pos_hint:{'center_x': 0.5, 'center_y': 0.5}
-            on_release:root.reset_quiz()
-        Widget:
-            size_hint_y:0.05
-        Button:
-            id:next_section
-            text:'Back'
-            font_style:'Button'
-            size_hint_x:0.7
-            pos_hint:{'center_x': 0.5, 'center_y': 0.5}
-            on_release:root.chevron_left()
-        Widget:
-            size_hint_y:0.05
-        Button:
-            id:next_section
-            text:'Next'
-            font_style:'Button'
-            size_hint_x:0.7
-            pos_hint:{'center_x': 0.5, 'center_y': 0.5}
-            on_release:root.arrow_right()
+            MyButton2:
+                text:'Try Again'
+            Widget:
+                size_hint_y:0.05
+            MyButton2:
+                text:'Back'
+                on_release:root.chevron_left()
+            Widget:
+                size_hint_y:0.05
+            MyButton2:
+                text:'Next'
+                on_release:root.arrow_right()
 
+            Widget:
+                size_hint_y:0.2
 
-        Label:
-            size_hint_y:0.7
-
-
-        NavButtons
+        NavButtons:
